<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MccDash</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
<!-- <string name="default_destfile">http://10.105.39.143/stream-test.m3u8</string> -->
 <!--<string name="default_destfile">http://10.105.34.103/www/main.m3u8</string> -->
  <!--   <string name="default_destfile">http://10.105.39.110/hls-server/output.m3u8</string>-->
<string name="default_destfile">http://10.105.37.217:8000/repo/stream-test.m3u8</string>
  <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="check_group">Check Group</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="clearcache">Clear Cache</string>
    <string name="local">Local</string>
    <string name="startplay">Start Play</string>
</resources>